chore: update module.conventions.gradle.kts to enable native access